# chocolatey-inform7

./: .gitignore  CMakeLists.txt  README.md  inform7.nuspec
.github/workflows/: chocolatey-build.yml
cmake/: PushPackage.cmake  VerifyPackage.cmake
tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1  inform7-config.ps1
